--- a/po/en.po
+++ b/po/en.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-11-16 09:36+0200\n"
+"PO-Revision-Date: 2019-02-08 17:27+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -103,7 +103,7 @@ msgstr ""
 msgid "Reference data information"
 msgstr ""
 
-msgid "Controlled vocabularies"
+msgid "Terminologies"
 msgstr ""
 
 msgid "Add vocabulary"
@@ -133,15 +133,6 @@ msgstr ""
 msgid "Data Vocabularies"
 msgstr ""
 
-msgid "Choose action"
-msgstr ""
-
-msgid "Show"
-msgstr ""
-
-msgid "Download"
-msgstr ""
-
 msgid "Confirm delete"
 msgstr ""
 
@@ -149,6 +140,12 @@ msgid "Following items are depending on the deleted"
 msgstr ""
 
 msgid "Are you sure that you want to delete?"
+msgstr ""
+
+msgid "Show"
+msgstr ""
+
+msgid "Download"
 msgstr ""
 
 msgid "Export"
@@ -456,7 +453,7 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "Suomi.fi Controlled Vocabularies"
+msgid "Suomi.fi Terminologies"
 msgstr ""
 
 msgid "Suomi.fi Reference Data"
@@ -2176,126 +2173,3 @@ msgstr "Attribute"
 
 msgid "owl:ObjectProperty"
 msgstr "Association"
-
-#~ msgid "Classification"
-#~ msgstr "Domain"
-
-#~ msgid "Diipadaa"
-#~ msgstr ""
-#~ "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod "
-#~ "tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim "
-#~ "veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea "
-#~ "commodo consequat. Duis aute irure dolor in reprehenderit in voluptate "
-#~ "velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint "
-#~ "occaecat cupidatat non proident, sunt in culpa qui officia deserunt "
-#~ "mollit anim id est laborum."
-
-#~ msgid "Search for tuotetaan"
-#~ msgstr "Search for produces"
-
-#~ msgid "Search for tuotetaan concept"
-#~ msgstr "Search for produces term"
-
-#~ msgid "Select palvelu"
-#~ msgstr "Select Public Service"
-
-#~ msgid "Select tuote"
-#~ msgstr "Select Product"
-
-#~ msgid "Search for palvelu info"
-#~ msgstr "Lets search for a class about a service"
-
-#~ msgid "Search for nimi info"
-#~ msgstr "Lets add name Property to the Class"
-
-#~ msgid "Search for tuotetaan info"
-#~ msgstr "Lets add new association to Product class"
-
-#~ msgid "Search for tuotetaan concept info"
-#~ msgstr "Search for the Product term in the existing terminologies"
-
-#~ msgid "Search for tuotetaan predicate"
-#~ msgstr "Search for is produced by association"
-
-#~ msgid "Select palvelu info"
-#~ msgstr "Select search results from the list"
-
-#~ msgid "Select nimi info"
-#~ msgstr "Name was found from the model and can be selected from the list"
-
-#~ msgid "Select tuote info"
-#~ msgstr "Lets add new Product class"
-
-#~ msgid "Select association target info"
-#~ msgstr "You can create new association from here"
-
-#~ msgid "Association is here info"
-#~ msgstr ""
-#~ "New association consists for permanent URI identifer, name, description "
-#~ "and range definitions."
-
-#~ msgid "Palvelu"
-#~ msgstr "Service"
-
-#~ msgid "Testikirjasto"
-#~ msgstr "Test model"
-
-#~ msgid "Palveluprofiili"
-#~ msgstr "Serviceprofile"
-
-#~ msgid "Tuote"
-#~ msgstr "Product"
-
-#~ msgid "Asia joka tuotetaan"
-#~ msgstr "Thing that is being produced"
-
-#~ msgid "Nimi"
-#~ msgstr "Name"
-
-#~ msgid "Tuotetaan"
-#~ msgstr "Is produced"
-
-#~ msgid "Tuotetaan palvelussa"
-#~ msgstr "Is produced in service"
-
-#~ msgid "tapahtumaketju joka toteuttaa jotain"
-#~ msgstr "event that produces something"
-
-#~ msgid "Create new info"
-#~ msgstr ""
-#~ "This is all that is required for creating a new model. Prefix will be "
-#~ "used to create namespace in the workbech domain. Alternatively you could "
-#~ "use the Namespace redirection to use other domain as the namespace. "
-
-#~ msgid "Localname description"
-#~ msgstr "Can be used in schemas or other local applications"
-
-#~ msgid "Interoperability method"
-#~ msgstr "Interoperability and understandability"
-
-#~ msgid "IOW"
-#~ msgstr "Interoperability descriptions"
-
-#~ msgid "Vocabulary filter"
-#~ msgstr "Terminology filter"
-
-#~ msgid "Search for tuote"
-#~ msgstr "Search for Product"
-
-#~ msgid "Search for tuote info"
-#~ msgstr "Lets add new Class about some Product"
-
-#~ msgid "Write code"
-#~ msgstr "Write code…"
-
-#~ msgid "Id"
-#~ msgstr "Identifier"
-
-#~ msgid "Is defined by"
-#~ msgstr "Library"
-
-#~ msgid "xsd:HTML"
-#~ msgstr "HTML"
-
-#~ msgid "xsd:XMLLiteral"
-#~ msgstr "XML"
