YTI-305: Add tabbing to data model page. Squashed commit of:     YTI-305: Fix sizes and borders of floating selection list and visualization.     YTI-305: Fix issues with model description text showing over full screened visualization.     YTI-305: Removed debug console logging.     YTI-305: Fixing model header row styles.     YTI-305: Fix url after class creation.     YTI-305: Move export activator to common header.     YTI-305: Fix some selection issues, e.g., with visualization click.     YTI-305: Handle namespaces-in-use, and other state handling when, e.g., editing model info.     YTI-305: Editing guards for both routing and tab changing.     YTI-305: Model loading error handling.     YTI-305: Route based selection and loading and related information flow quite OK.     YTI-305: Continue refactoring. Fix deleting model etc.     YTI-305: Run auto-format to certain files.     YTI-305: Continue routing refactoring.     YTI-305: Continue refactoring logic and control out from modelPage.ts.     YTI-305: Start moving stuff to their correct places. Initial dummy version.     YTI-305: Preparations for tabs, mainly AngularJS + Angular mixing stuff.

--- a/po/en.po
+++ b/po/en.po
@@ -390,6 +390,26 @@ msgstr ""
 msgid "Edit reference data"
 msgstr ""
 
+#, fuzzy
+#| msgid "Add model description"
+msgid "Datamodel definition"
+msgstr ""
+"Add domain specific Core Vocabulary or application specific Application "
+"Profile"
+
+msgid "Datamodel details"
+msgstr ""
+
+#, fuzzy
+#| msgid "InformationPool"
+msgid "Information domain"
+msgstr "Information pool"
+
+#, fuzzy
+#| msgid "association"
+msgid "Organization"
+msgstr "Association"
+
 msgid "Show model details"
 msgstr ""
 
