--- a/po/fi.po
+++ b/po/fi.po
@@ -389,6 +389,18 @@ msgstr "poista valinta"
 msgid "Edit reference data"
 msgstr "Muokkaa koodistoa"
 
+msgid "Datamodel definition"
+msgstr "Tietomääritykset"
+
+msgid "Datamodel details"
+msgstr "Tietomallin tiedot"
+
+msgid "Information domain"
+msgstr "Tietoalue"
+
+msgid "Organization"
+msgstr "Organisaatio"
+
 msgid "Show model details"
 msgstr "Näytä tietomallin tiedot"
 
@@ -894,7 +906,7 @@ msgid "Search for class"
 msgstr "Etsi luokkaa"
 
 msgid "Search for class info"
-msgstr ""
+msgstr "Etsi luokan tietoja"
 
 msgid "Search for concept"
 msgstr "Etsi käsitettä"
@@ -2215,4 +2227,3 @@ msgstr "Attribuutti"
 
 msgid "owl:ObjectProperty"
 msgstr "Assosiaatio"
-
