Revert "YTI-305: Add tabbing to data model page."
This reverts commit 98a594a347c875f9ba3a8045fb04445b3db4512b.

--- a/po/template.pot
+++ b/po/template.pot
@@ -364,16 +364,10 @@ msgstr ""
 msgid "Edit reference data"
 msgstr ""
 
-msgid "Datamodel definition"
+msgid "Show model details"
 msgstr ""
 
-msgid "Datamodel details"
-msgstr ""
-
-msgid "Information domain"
-msgstr ""
-
-msgid "Organization"
+msgid "Hide model details"
 msgstr ""
 
 msgid "Browse reference data codes"
