Changed finnish localization for Unique label

--- a/po/fi.po
+++ b/po/fi.po
@@ -1762,7 +1762,7 @@ msgid "Match to content"
 msgstr "Hae sisällöstä"
 
 msgid "Unique label"
-msgstr "Yksi arvo kieltä kohti"
+msgstr "Yksi arvo kieltä kohden"
 
 msgid "Unique label info"
 msgstr "Määrittelee onko vain yksi kieliversioitu arvo sallittu yhtä kieltä kohden. Tämän avulla voidaan määritellä esimerkiksi Enimmäismäärä 2 siten että vain erikieliset arvot ovat sallittuja"
