Added property pairs inputs using existing editables

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-04-09 10:59+0300\n"
+"PO-Revision-Date: 2019-04-24 11:24+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -208,6 +208,9 @@ msgstr ""
 msgid "Technical metadata"
 msgstr "Technical metadata"
 
+msgid "Property pairs"
+msgstr ""
+
 msgid "Reusable predicate"
 msgstr ""
 
@@ -390,25 +393,17 @@ msgstr ""
 msgid "Edit reference data"
 msgstr ""
 
-#, fuzzy
-#| msgid "Add model description"
 msgid "Datamodel definition"
 msgstr ""
-"Add domain specific Core Vocabulary or application specific Application "
-"Profile"
 
 msgid "Datamodel details"
 msgstr ""
 
-#, fuzzy
-#| msgid "InformationPool"
 msgid "Information domain"
-msgstr "Information pool"
+msgstr ""
 
-#, fuzzy
-#| msgid "association"
 msgid "Organization"
-msgstr "Association"
+msgstr ""
 
 msgid "Browse reference data codes"
 msgstr ""
@@ -1782,7 +1777,7 @@ msgstr "Information description"
 msgid "Search"
 msgstr ""
 
-msgid "Superproperty"
+msgid "Specialized from class"
 msgstr ""
 
 msgid "Editorial note"
@@ -1989,8 +1984,8 @@ msgstr ""
 msgid "Superattribute info"
 msgstr ""
 
-msgid "Definition info"
-msgstr "Definition of the concept"
+msgid "Superproperty"
+msgstr ""
 
 msgid "Superproperty info"
 msgstr ""
@@ -2003,8 +1998,8 @@ msgstr ""
 "Property range (or datatype) is chosen from list of interoperable XSD "
 "datatypes"
 
-msgid "Specialized from class"
-msgstr ""
+msgid "Definition info"
+msgstr "Definition of the concept"
 
 msgid "Specialized from class info"
 msgstr "Reference to the Class of the Shape"
@@ -2160,6 +2155,33 @@ msgid "Unique label info"
 msgstr ""
 "Defines if only one localized value is allowed for each language. This can "
 "be used for example to define cardinaly of two with unique localized values"
+
+msgid "Equals"
+msgstr ""
+
+msgid "Equals info"
+msgstr "Value of this property should be equal to values of these properties"
+
+msgid "Disjoint"
+msgstr ""
+
+msgid "Disjoint info"
+msgstr ""
+"Value of this property should be disjoint to values of these properties"
+
+msgid "Less than"
+msgstr ""
+
+msgid "Less than info"
+msgstr "Value of this property should be less than values of these properties"
+
+msgid "Less than or equals"
+msgstr ""
+
+msgid "Less than or equals info"
+msgstr ""
+"Value of this property should be less than or equal to values of these "
+"properties"
 
 msgid "Homepage"
 msgstr "Link"
