--- a/po/en.po
+++ b/po/en.po
@@ -1435,6 +1435,9 @@ msgstr "JSON-LD Context"
 msgid "application/schema+json"
 msgstr "JSON Schema"
 
+msgid "application/vnd+oai+openapi+json"
+msgstr "Open API 3.0.2"
+
 msgid "framed ld+json"
 msgstr "Framed JSON-LD"
 
