--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Copied"
@@ -1047,8 +1047,8 @@ msgstr ""
 "Täältä voit lisätä luokalle uuden attribuutin jonka arvoalue perustuu "
 "tietotyyppiin tai assosiaation jolla viitataan toiseen luokkaan"
 
-msgid "Add properties from scope class"
-msgstr "Lisää ominaisuudet tarkennettavasta luokasta"
+msgid "Add properties from super class"
+msgstr "Lisää ominaisuudet yläluokasta"
 
 msgid "not found in the concept database"
 msgstr "ei löydy sanastosta"
@@ -1509,11 +1509,11 @@ msgstr "Pääkäyttäjänä ryhmissä"
 msgid "Add properties from class"
 msgstr "Lisää ominaisuudet luokasta"
 
-msgid "Add properties from super class"
-msgstr "Lisää ominaisuudet yläluokasta"
-
 msgid "Define concept for the class"
 msgstr "Määrittele käsite luokalle"
+
+msgid "Add properties from scope class"
+msgstr "Lisää ominaisuudet tarkennettavasta luokasta"
 
 msgid "Add properties from profile class"
 msgstr "Lisää ominaisuudet nostettavaan luokkaan"
@@ -1853,6 +1853,9 @@ msgstr "Tietosisältö"
 
 msgid "Search"
 msgstr "Etsi"
+
+msgid "standard"
+msgstr "Kansainvälinen suositus"
 
 msgid "All model types"
 msgstr "Kaikki tietomallityypit"
@@ -2316,5 +2319,5 @@ msgstr "Attribuutti"
 msgid "owl:ObjectProperty"
 msgstr "Assosiaatio"
 
-msgid "API path"
-msgstr "API polku"
+#~ msgid "API path"
+#~ msgstr "API polku"
