--- a/po/en.po
+++ b/po/en.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-04-09 10:59+0300\n"
+"PO-Revision-Date: 2019-05-17 12:23+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.2\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -1785,6 +1785,12 @@ msgstr "Information description"
 msgid "Search"
 msgstr ""
 
+msgid "All model types"
+msgstr ""
+
+msgid "All use contexts"
+msgstr ""
+
 msgid "Superproperty"
 msgstr ""
 
@@ -2221,6 +2227,3 @@ msgstr "Attribute"
 
 msgid "owl:ObjectProperty"
 msgstr "Association"
-
-msgid "API path"
-msgstr ""
