--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-05-24 13:15+0300\n"
+"PO-Revision-Date: 2019-06-04 12:04+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -264,6 +264,9 @@ msgstr ""
 
 msgid "Invalid namespace error"
 msgstr ""
+
+msgid "Invalid namespace url urn error"
+msgstr "Namespace must be URL and end with ‘#’ or ‘/‘ or be URN"
 
 msgid "Invalid id error"
 msgstr ""
